@@ -86,6 +86,12 @@ void KgPanel::setupMiscTab()
     miscLayout->setContentsMargins(11, 11, 11, 11);
 
 // ---------------------------------------------------------------------------------------
+    KONFIGURATOR_CHECKBOX_PARAM general_settings[] = { // cfg_class, cfg_name, default, text, restart, tooltip
+        {"Look&Feel", "FlatOriginBar", false, i18n("Flat Origin Bar"),   true,  0 },
+    };
+    miscLayout->addWidget(createCheckBoxGroup(2, 0, general_settings, 1 /*count*/, tab, PAGE_MISC), 0, Qt::AlignTop);
+
+// ---------------------------------------------------------------------------------------
 // ------------------------------- Operation ---------------------------------------------
 // ---------------------------------------------------------------------------------------
     QGroupBox *miscGrp = createFrame(i18n("Operation"), tab);
