@@ -1,3 +1,4 @@
+    ADDED: option: Panel > General > Flat Origin Bar
     ADDED: option: Panel > Buttons > Toolbar buttons have icons
     ADDED: listpanel buttons: Back, Forward
     ADDED: options: Panel > Layout >
